# AI-Agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  judge.md  my_app.py
1_foundations/me/: lebenslauf.txt  summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  my_lab2.py
2_openai/deep_research/: email_agent.py
2_openai/deep_research_my_project/: email_agent.ipynb  email_agent.py  planner_agent.ipynb  planner_agent.py  research_manager.ipynb  research_manager.py  search.md  search_agent.ipynb  search_agent.py  writer_agent.ipynb  writer_agent.py
3_crew/financial_researcher/output/: report.md
3_crew/my_coder/coder/: pyproject.toml
3_crew/my_coder/coder/output/: code_and_output.txt
3_crew/my_debate/: pyproject.toml
3_crew/my_debate/output/: decide.md  oppose.md  propose.md
3_crew/my_engineering_team/my_engineering_team/: pyproject.toml
3_crew/my_engineering_team/my_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/my_engineering_team/my_engineering_team/src/my_engineering_team/: crew.py  main.py
3_crew/my_engineering_team/my_engineering_team/src/my_engineering_team/config/: agents.yaml
3_crew/my_financial_researcher/: pyproject.toml
3_crew/my_financial_researcher/output/: report.md
3_crew/my_stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
(+15 files in other folders)
